# neural-networks-poc

./: README.md  STEP_1.md  STEP_2.md  Taskfile.yaml  pyproject.toml
src/neural_networks_poc/: step_1.py
tests/: test_core.py
